--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "shetabit/payment",
+    "name": "signalads-co/payment",
     "type": "library",
     "description": "Laravel Payment Gateway Integration Package",
     "keywords": [
